--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                                         class="author">@Robert</a></p>
                                 <img src="./assets/img/embl/to-be.jpg" alt="to be lesson" class="image-left__center" />
                                 <p>
-                                    Hello again! As we promised we are updating our section regularly at least once per
+                                    Hello again! As we promised we update our sections regularly at least once per
                                     week. <br>
                                     <b>New features: </b> <br>
-                                    - <a href="./stuff/api/polishNames/index.html">Polish name checker API</a> is based
-                                    on data now, if you don't see some name just report us
-                                    and we will add as soon as possible. <br>
+                                    - <a href="./stuff/api/polishNames/index.html">Polish name checker APP</a> is based
+                                    on our data now, if you don't see some names just send report to us
+                                    and we will update it as soon as possible. <br>
                                     <b>Lessons</b> <br>
                                     - to be <br>
                                     - 10 Polish idioms <br>
