--- a/test/unit0/index.html
+++ b/test/unit0/index.html
@@ -27,9 +27,9 @@
                         <div id="question"></div>
                         <div id="qImg"></div>
                         <div id="choices">
-                            <div class="choice" id="A" onclick="checkAnswer('A')"></div>
-                            <div class="choice" id="B" onclick="checkAnswer('B')"></div>
-                            <div class="choice" id="C" onclick="checkAnswer('C')"></div>
+                            <button class="choice" id="A" onclick="checkAnswer('A')"></button>
+                            <button class="choice" id="B" onclick="checkAnswer('B')"></button>
+                            <button class="choice" id="C" onclick="checkAnswer('C')"></button>
                         </div>
                         <div id="timer">
                             <div id="counter"></div>
