--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1955,22 +1955,26 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
+          <a href="./test/unit0/" target="_blank">
+            <button class="acc lesson lesson--testUnit0">テスト unit0</button>
+          </a>
         </div>
-        <div class="reportButton">
-          <button class="report" onclick="report()">レポート</button>
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <div id="myModal" class="modal">
+      </div>
+      <div class="reportButton">
+        <button class="report" onclick="report()">レポート</button>
+      </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+      <div id="myModal" class="modal">
 
-          <!-- The Close Button -->
-          <span class="close">&times;</span>
+        <!-- The Close Button -->
+        <span class="close">&times;</span>
 
-          <!-- Modal Content (The Image) -->
-          <img class="modal-content" id="img01">
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="img01">
 
-          <!-- Modal Caption (Image Text) -->
-          <div id="caption"></div>
-        </div>
+        <!-- Modal Caption (Image Text) -->
+        <div id="caption"></div>
+      </div>
       </div>
       <script src="./../assets/js/gallery.js"></script>
       <script src="./../assets/js/panel.js"></script>
