--- a/jp/test/unit0/index.html
+++ b/jp/test/unit0/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <title>UNIT 0 test - SARO</title>
-    <link rel="stylesheet" href="./../../assets/style/css/style.css">
+    <link rel="stylesheet" href="./../../../assets/style/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <section class="quiz">
-        <button class="back" onclick="goBack()">Back</button>
+        <button class="back" onclick="goBack()">戻る</button>
         <script>
             function goBack() {
                 window.history.back();
@@ -21,7 +21,7 @@
             <div class="box__quiz box__quiz--item">
                 <div id="box__quiz">
                     <div class="start start--item">
-                        <div id="start">Start Quiz!</div>
+                        <div id="start">スタート</div>
                     </div>
                     <div id="quiz" style="display: none">
                         <div id="question"></div>
@@ -43,8 +43,8 @@
             </div>
         </div>
     </section>
-    <script src="./../../assets/js/data/components/onClickPlay.js"></script>
-    <script type="module" src="./../../assets/js/testUnit0.js"></script>
+    <script src="./../../../assets/js/data/components/onClickPlay.js"></script>
+    <script type="module" src="./../../../assets/js/testUnit0.js"></script>
 </body>
 
 </html>
