--- a/stuff/tools.html
+++ b/stuff/tools.html
@@ -67,7 +67,7 @@
                             <div class="quiz__box">
                                 <h2>Polish name-chcker</h2>
                                 <img src="https://michalskirobert.github.io/img/portfolio__api-02.jpg"
-                                    alt="Polish declension" class="image-left__center--medium">
+                                    alt="Polish name checker" class="image-left__center--medium">
                                 <b>Describe:</b>
                                 <p>You can check about Polish names here :) I hope you will enjoy this APP
                                     if you didn't see some name you wanted to check, please report it and it's gonna be
@@ -102,10 +102,10 @@
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
                         <option value="" disabled selected>English</option>
-                        <option value="https://saro.website/jp/stuff/dictionary.html">日本語</option>
-                        <option value="https://saro.website/kr/stuff/dictionary.html">한국어</option>
-                        <option value="https://saro.website/ch/stuff/dictionary.html">中文</option>
-                        <option value="https://saro.website/vi/stuff/dictionary.html">Tiếng Việt</option>
+                        <option value="https://saro.website/jp/stuff/tools">日本語</option>
+                        <option value="https://saro.website/kr/stuff/tools">한국어</option>
+                        <option value="https://saro.website/ch/stuff/tools">中文</option>
+                        <option value="https://saro.website/vi/stuff/tools">Tiếng Việt</option>
                     </select>
                     <span class="custom-arrow"></span>
                 </div>
