ch to be updated

--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -915,117 +915,100 @@
           <button class="acc lesson lesson--to-be">To be verb</button>
           <div class="panel">
             <h2>To be verb</h2>
-            <p>Verb „to be” is usually the first verb you learn when studying a new language. So, let’s see what is
-              looks
-              like in Polish. <br><br>
-              First, let’s take a look at the infinitive form – it’s <span lang="pl">być.</span> <br> <br>
-              Polish verbs conjugate according to many factors but today to make things simple we will look just at
-              present tense conjugation. <br><br>
+            <p>开始学习新语言的时候，《是》一般为第一个学会的动词。那，我们看看波兰语“是”的情况怎么样吧。<br><br>
+              首先，请看一下动词不定式——“być”。<br>
+            影响波兰语动词词形的因素很多，不过为了让这门课清楚一些，今天我们只会看现在时“是”的标准变法。 <br><br>
             </p>
             <table>
               <tr>
                 <th><span lang="pl">Być</span> </th>
-                <th>to be</th>
+                <th>是</th>
               </tr>
               <tr>
                 <td>Ja jestem</td>
-                <td>I am</td>
+                <td>我是</td>
               </tr>
               <tr>
                 <td><span lang="pl">Ty jesteś</span></td>
-                <td>You are</td>
+                <td>你是</td>
               </tr>
               <tr>
                 <td>On/ona/ono jest</td>
-                <td>He/she/it is (also to jest – this is)</td>
+                <td>他/她/它是 (还有 to jest – 这是)</td>
               </tr>
               <tr>
                 <td><span lang="pl">My jesteśmy</span></td>
-                <td>we are</td>
+                <td>我们是</td>
               </tr>
               <tr>
                 <td><span lang="pl">Wy jesteście</span></td>
-                <td>you are</td>
+                <td>你们是</td>
               </tr>
               <tr>
                 <td><span lang="pl">Oni/one są</span></td>
-                <td>they are</td>
+                <td>他们/她们/它们是</td>
               </tr>
             </table>
             <p>
-              Here are some example sentences: <br><br>
-              <span lang="pl"> <span class="accent">Ja jestem</span> studentem – I am a university student (male
-                speaker)<br>
-                <span class="accent">Ja jestem</span> studentką – I am a university student (female speaker)<br>
-                <span class="accent">Ty jesteś</span> studentem – You are a university student (male listener)<br>
-                <span class="accent">Ty jesteś</span> studentką – You are a university student (female listener)<br>
-                <span class="accent">On jest</span> studentem – He is a university student.<br>
-                <span class="accent">Ona jest</span> studentką – She is a university student.<br>
-                <span class="accent">Ono jest</span> dzieckiem. – It is a child.<br>
-                <span class="accent">My jesteśmy</span> studentami – We are university students (the speaker and the
-                group
-                are either all males or mixed – males and females) <br>
-                <span class="accent">My jesteśmy</span> studentkami – We are university students (the speaker and the
-                group are all females)<br>
-                <span class="accent">Wy jesteście</span> studentami – You are university students (the listeners are all
-                males or males + females)<br>
-                <span class="accent">Wy jesteście</span> studentkami – You are university students (the listeners are
-                all
-                females)<br>
-                <span class="accent">Oni są</span> studentami – They are university students (they = all males or males
-                +
-                females)<br>
-                <span class="accent">One są</span> studentkami – They are university students (they = all females)<br>
-                <span class="accent">To jest</span> uniwersytet – This is a university. <br></span>
+              请查看下列句子：<br><br>
+              <span lang="pl"> <span class="accent">Ja jestem</span> studentem – 我是大学生（《我》是男的）<br>
+                <span class="accent">Ja jestem</span> studentką – 我是大学生（《我》是女的）<br>
+                <span class="accent">Ty jesteś</span> studentem – 你是大学生（《你》是男的）<br>
+                <span class="accent">Ty jesteś</span> studentką –  你是大学生（《你》是女的）<br>
+                <span class="accent">On jest</span> studentem – 他是大学生。<br>
+                <span class="accent">Ona jest</span> studentką – 她是大学生。<br>
+                <span class="accent">Ono jest</span> dzieckiem. – 它是个孩子。<br>
+                <span class="accent">My jesteśmy</span> studentami – 我们是大学生 （《我们》都是男的或者男女人群）<br>
+                <span class="accent">My jesteśmy</span> studentkami – 我们是大学生（《我们》都是女的）<br>
+                <span class="accent">Wy jesteście</span> studentami –  你们是大学生（《你们》都是男的或者男女人群）<br>
+                <span class="accent">Wy jesteście</span> studentkami – 你们是大学生（《你们》都是女的）<br>
+                <span class="accent">Oni są</span> studentami – 他们是大学生（《他们》都是男的或者男女人群）<br>
+                <span class="accent">One są</span> studentkami – 她们是大学生（《她们》都是女的）<br>
+                <span class="accent">To jest</span> uniwersytet – 这是大学 <br></span>
             </p>
-            <p>You might see that in this case meaning slightly changes depending on the noun or pronoun, <b>not the
-                verb</b>. Don’t worry about nouns declension too much in this acc lesson – just focus on getting <span
-                lang="pl">być</span>
-              right.
+            <p>你可能发现了，上写局子里的意思根据名词或代词不同而变，意思变化不依靠动词。尽管如此，现在不要太担心名词变法——上这门课的时候只注意<span
+              lang="pl">być</span>的变化规则就行。😊
               <br><br>
-              Would you like to try and form a few sentences by yourself?
+              你想不想要练习一下，自己造句吗？
             </p>
             <form id="quiz" name="quiz">
-              <p>You see a group of males and can clearly see they are university students. How would you start
-                describing
-                them?</p>
+              <p>你看见一群男人，他们都明显是大学生。你会怎么开始介绍他们？</p>
               <input type="radio" name="question1" value="1">Ja jestem...
               <input type="radio" name="question1" value="2"><span lang="pl">Oni są...</span>
               <input type="radio" name="question1" value="3">On jest...
 
-              <p>If your mum was a teacher, how would you start this sentence? </p>
+              <p>如果你妈妈当老师，你会怎么介绍她？ </p>
               <input type="radio" name="question2" value="1">Ona jest...
               <input type="radio" name="question2" value="2">Ono jest...
               <input type="radio" name="question2" value="3"><span lang="pl">Oni są...</span>
 
-              <p>You are Korean – how would you start introducing yourself? </p>
+              <p>你是韩国人，你会怎么开始自我介绍？ </p>
               <input type="radio" name="question3" value="1"><span lang="pl">Ty jesteś...</span>
               <input type="radio" name="question3" value="2"><span lang="pl">One są...</span>
               <input type="radio" name="question3" value="3">Ja jestem...
 
-              <p>Your female friends you came to a party with are all university students – how would you introduce them
-                to other people?</p>
+              <p>你一起来派对的女性朋友们都是大学生。你会怎么把她们介绍给别人？</p>
               <input type="radio" name="question4" value="1"><span lang="pl">Wy jesteście...</span>
               <input type="radio" name="question4" value="2"><span lang="pl">Ty jesteś...</span>
               <input type="radio" name="question4" value="3"><span lang="pl">One są...</span>
 
-              <p>Your Polish friends are with you. What would you say to them? </p>
+              <p>你的波兰朋友们和你在一起。你会怎么对他们说？ </p>
               <input type="radio" name="question5" value="1"><span lang="pl">Wy jesteście...</span>
               <input type="radio" name="question5" value="2"><span lang="pl">One są...</span>
               <input type="radio" name="question5" value="3"><span lang="pl">Ty jesteś...</span>
 
 
-              <p> You can also try to translate following sentences:<br></p>
+              <p> 你还可以试试翻译下列句子：<br></p>
 
-              <p>You are a university student.</p>
+              <p>你是个大学生。</p>
               <input class="textbox" type="text" name="question6"> studentem.
-              <p>He is a teacher. </p>
+              <p>他是老师。 </p>
               <input class="textbox" type="text" name="question7"> nauczycielem.
-              <p>They are my friends.</p>
+              <p>他们是我的朋友。</p>
               <input class="textbox" type="text" name="question8"> moimi przyjaciółmi.
-              <p>They are my female friends.</p>
+              <p>她们是我的朋友。</p>
               <input class="textbox" type="text" name="question9"> moimi przyjaciółkami.
-              <p>I am your neighbour.</p>
+              <p>我是你的邻居。</p>
               <input class="textbox" type="text" name="question10"> twoim sąsiadem.
               <input id="submitButton" type="button" value="Check my answers" onclick="check()">
             </form>
