--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1267,7 +1267,7 @@
               <ruby>wieloletnia wojna<rp>(</rp>
                 <rt>ウィエロレツニャ　ヲイナ</rt>
                 <rp>)</rp>
-              </ruby>, <ruby>druga wojna<rp>(</rp></ruby>
+              </ruby>, <ruby>druga wojna<rp>(</rp><rt>ドルガ　ヲイナ</rt><rp>)</rp></ruby> →  <ruby>wojna domowa<rp>(</rp><rt>ヲイナ　ドモワ</rt><rp>)</rp></ruby>
             </p>
             <div class="sign">
               <p class="sign--person">作成者:</p>
@@ -1515,7 +1515,7 @@
               </tr>
               <tr>
                 <td><ruby>herbata<rp>(</rp>
-                    <rt＞ヘルバタ< /rt>
+                    <rt>ヘルバタ</rt>
                       <rp>)</rp>
                   </ruby> - お茶</td>
                 <td><ruby>ta herbata<rp>(</rp>
@@ -1693,8 +1693,8 @@
                     <rt>オノ　イエストゥ</rt>
                     <rp>)</rp>
                   </ruby></td>
-                <td>彼/彼女/それは(また、 to jest<rp>(</rp>
-                  <rt>プルボワワム　ヨン　プシェコナチ</rt>
+                <td>彼/彼女/それは(また、 <ruby>to jest<rp>(</rp>
+                  <rt>ト　イエストゥ</rt>
                   <rp>)</rp></ruby> – これは)
                 </td>
               </tr>
@@ -1744,7 +1744,7 @@
                 <span class="accent"><ruby>Ty jesteś<rp>(</rp>
                     <rt>テイ イェステシ</rt>
                     <rp>)</rp>
-                  </ruby></span> <ruby>studentem<ruby>studentem
+                  </ruby></span> <ruby>studentem
                     <rp>(</rp>
                     <rt>ストゥデンテム</rt>
                     <rp>)</rp>
@@ -1760,7 +1760,7 @@
                       <rt>オン イェストゥ</rt>
                       <rp>)</rp>
                     </ruby></span>
-                  <ruby>studentem<ruby>studentem<rp>(</rp>
+                  <ruby>studentem<rp>(</rp>
                       <rt>ストゥデンテム</rt>
                       <rp>)</rp>
                     </ruby> – 彼は大学生です。<br>
@@ -1797,34 +1797,34 @@
                     </ruby> – 私たちは大学生です。(話し手とその団体の全員が女性の場合)<br>
                     <span class="accent"><ruby>Wy jesteście<rp>(
                         </rp>
-                        <rt>オニ</rt>
+                        <rt>ウィ　イェステシチエ</rt>
                         <rp>)</rp>
                       </ruby></span> <ruby>studentami<rp>(</rp>
                       <rt>ストゥデンタミ</rt>
                       <rp>)</rp>
                     </ruby> – あなたは大学生です。(聞き手が全員男性、または男女の場合)<br>
-                    <span class="accent"><ruby>Wy
+                    <span class="accent">Wy
                         jesteście</span> <ruby>studentkami<rp>(
                       </rp>
                       <rt>ストゥデントゥカミ</rt>
                       <rp>)</rp>
                     </ruby> – あなたは大学生です。(聞き手が全員女性の場合)<br>
                     <span class="accent"><ruby>Oni są<rp>(</rp>
-                        <rt>オニ</rt>
+                        <rt>オニ　ソン</rt>
                         <rp>)</rp>
                       </ruby></span> <ruby>studentami<rp>(</rp>
                       <rt>ストゥデンタミ</rt>
                       <rp>)</rp>
                     </ruby> – 彼らは大学生です。(彼ら＝全員男性、または男女の場合)<br>
                     <span class="accent"><ruby>One są<rp>(</rp>
-                        <rt>オニ</rt>
+                        <rt>オネ　ソン</rt>
                         <rp>)</rp>
                       </ruby></span> <ruby>studentkami<rp>(</rp>
                       <rt>ストゥデントゥカミ</rt>
                       <rp>)</rp>
                     </ruby> – 彼女らは大学生です。(彼女ら＝全員女性の場合)<br>
                     <span class="accent"><ruby>To jest<rp>(</rp>
-                        <rt>オニ</rt>
+                        <rt>ト　イェストゥ</rt>
                         <rp>)</rp>
                       </ruby></span> <ruby>uniwersytet<rp>(</rp>
                       <rt>ウニヴェルシテトゥ</rt>
